vendor/zerocopy/tests/ui-msrv/diagnostic-not-implemented-known-layout.stderr
error[E0277]: the trait bound `NotZerocopy: KnownLayout` is not satisfied
  --> tests/ui-msrv/diagnostic-not-implemented-known-layout.rs:16:26
   |
16 |     takes_known_layout::<NotZerocopy>();
   |                          ^^^^^^^^^^^ the trait `KnownLayout` is not implemented for `NotZerocopy`
   |
note: required by a bound in `takes_known_layout`
  --> tests/ui-msrv/diagnostic-not-implemented-known-layout.rs:19:26
   |
19 | fn takes_known_layout<T: KnownLayout>() {}
   |                          ^^^^^^^^^^^ required by this bound in `takes_known_layout`
